apps/headlamp/tailscale-hostname.yaml
kind: Service
apiVersion: v1
metadata:
  name: headlamp
  namespace: kube-system
  annotations:
    tailscale.com/hostname: headlamp
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
